# naoqi_driver

./: .buildinfo  .gitignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  CMakeLists_catkin.txt  README.md  README.rst  alrosbridge.pml  api.html  genindex.html  index.html  install.html  manifest.xml  next.html  other.html  other_usage.html  package.xml  qiproject.xml  run.sh  search.html  searchindex.js  start.html  topics.html  trouble.html
.doctrees/: api.doctree  environment.pickle  index.doctree  install.doctree  next.doctree  other.doctree  other_usage.doctree  start.doctree  topics.doctree  trouble.doctree
.github/workflows/: kinetic_xenial.yml  melodic_bionic.yml  melodic_stretch.yml  noetic_focal.yml  ros.yml
_sources/: index.txt  install.txt  other.txt  start.txt  topics.txt
api/: AudioBuffer_8h.html  AudioBuffer_8h_source.html  BlinkActionFeedback_8h.html  BlinkActionFeedback_8h_source.html  BlinkActionGoal_8h.html  BlinkActionGoal_8h_source.html  BlinkActionResult_8h.html  BlinkActionResult_8h_source.html  BlinkAction_8h.html  BlinkAction_8h_source.html  BlinkFeedback_8h.html  BlinkFeedback_8h_source.html  BlinkGoal_8h.html  BlinkGoal_8h_source.html  BlinkResult_8h.html  BlinkResult_8h_source.html  BodyPoseActionFeedback_8h.html  BodyPoseActionFeedback_8h_source.html  BodyPoseActionGoal_8h.html  BodyPoseActionGoal_8h_source.html  BodyPoseActionResult_8h.html  BodyPoseActionResult_8h_source.html  BodyPoseAction_8h.html  BodyPoseAction_8h_source.html  BodyPoseFeedback_8h.html  BodyPoseFeedback_8h_source.html  BodyPoseGoal_8h.html  BodyPoseGoal_8h_source.html  BodyPoseResult_8h.html  BodyPoseResult_8h_source.html  BodyPoseWithSpeedActionFeedback_8h.html  BodyPoseWithSpeedActionFeedback_8h_source.html  BodyPoseWithSpeedActionGoal_8h.html  BodyPoseWithSpeedActionGoal_8h_source.html  BodyPoseWithSpeedActionResult_8h.html  BodyPoseWithSpeedActionResult_8h_source.html  BodyPoseWithSpeedAction_8h.html  BodyPoseWithSpeedAction_8h_source.html  BodyPoseWithSpeedFeedback_8h.html  BodyPoseWithSpeedFeedback_8h_source.html  (+1665 more)
api/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+110 more)
app/: alrosbridge.pml  manifest.xml  run.sh
benchmark/: CMakeLists.txt
benchmark/src/: benchmark_helpers.h  float_array.h  simple_publisher.cpp  simple_subscriber.cpp
cfg/: NaoqiSpeech.cfg
doc/: Doxyfile
doc/source/: api.rst  conf.py  index.rst  install.rst  next.rst  other.rst  other_usage.rst  start.rst  topics.rst  trouble.rst
doc/stl/: URG_Stay_Base.stl  URG_Stay_Tower.stl
include/alrosbridge/: alrosbridge.hpp  message_actions.h  tools.hpp
include/naoqi_driver/: message_actions.h  naoqi_driver.hpp  tools.hpp
include/naoqi_msgs/: AudioBuffer.h  BlinkAction.h  BlinkActionFeedback.h  BlinkActionGoal.h  BlinkActionResult.h  BlinkFeedback.h  BlinkGoal.h  BlinkResult.h  BodyPoseAction.h  BodyPoseActionFeedback.h  BodyPoseActionGoal.h  BodyPoseActionResult.h  BodyPoseFeedback.h  BodyPoseGoal.h  BodyPoseResult.h  BodyPoseWithSpeedAction.h  BodyPoseWithSpeedActionFeedback.h  BodyPoseWithSpeedActionGoal.h  BodyPoseWithSpeedActionResult.h  BodyPoseWithSpeedFeedback.h  BodyPoseWithSpeedGoal.h  BodyPoseWithSpeedResult.h  Bumper.h  CmdPoseService.h  CmdPoseServiceRequest.h  CmdPoseServiceResponse.h  CmdVelService.h  CmdVelServiceRequest.h  CmdVelServiceResponse.h  FadeRGB.h  FloatArrayStamped.h  FloatStamped.h  FollowPathAction.h  FollowPathActionFeedback.h  FollowPathActionGoal.h  FollowPathActionResult.h  FollowPathFeedback.h  FollowPathGoal.h  FollowPathResult.h  GetInstalledBehaviors.h  (+58 more)
launch/: naoqi_driver.launch  register_depth.launch
msg/: README
share/: boot_config.json  mem_config.json  nao.rviz  pepper.rviz
share/urdf/: nao.urdf  nao_robot.urdf  pepper.urdf  pepper_robot.urdf  romeo.urdf
src/: alrosbridge.cpp  alrosbridge.hpp  alrosconverter.cpp  alrosconverter.hpp  alrospublisher.hpp  autoload_registration.cpp  driver_authenticator.hpp  event.hpp  event.hxx  external_registration.cpp  helpers.hpp  main.cpp  main_local.cpp  naoqi_driver.cpp  naoqi_env.hpp  registration.cpp  ros_env.hpp
src/converters/: alrosconverter.cpp  alrosconverter.hpp  audio.cpp  audio.hpp  battery.cpp  battery.hpp  bumper.cpp  bumper.hpp  camera.cpp  camera.hpp  camera_info_definitions.hpp  converter_base.hpp  diagnostics.cpp  diagnostics.hpp  imu.cpp  imu.hpp  info.cpp  info.hpp  int.cpp  int.hpp  joint_state.cpp  joint_state.hpp  laser.cpp  laser.hpp  log.cpp  log.hpp  memory_list.cpp  memory_list.hpp  nao_footprint.hpp  odom.cpp  odom.hpp  odometry.hpp  people.cpp  people.hpp  robot_description.hpp  sonar.cpp  sonar.hpp  sound.cpp  sound.hpp  string.cpp  (+3 more)
src/event/: audio.cpp  audio.hpp  basic.hpp  basic.hxx  people.cpp  people.hpp  sound.cpp  sound.hpp  touch.cpp  touch.hpp
src/helpers/: bridge_helpers.hpp  driver_helpers.cpp  driver_helpers.hpp  filesystem_helpers.hpp  naoqi_helpers.hpp  recorder_helpers.hpp  transform_helpers.hpp
src/publishers/: basic.hpp  camera.cpp  camera.hpp  camera_info_definitions.hpp  diagnostics.cpp  diagnostics.hpp  float.cpp  float.hpp  imu.cpp  imu.hpp  info.cpp  info.hpp  int.cpp  int.hpp  joint_state.cpp  joint_state.hpp  laser.cpp  laser.hpp  log.cpp  log.hpp  memory_list.cpp  memory_list.hpp  nao_joint_state.cpp  nao_joint_state.hpp  odometry.cpp  odometry.hpp  publisher.hpp  publisher_base.hpp  publisher_base_image.hpp  publisher_camera.cpp  publisher_camera.hpp  publisher_int.cpp  publisher_int.hpp  sonar.cpp  (+7 more)
test/: CMakeLists.txt  concept_test.cpp  converter_memory_test.cpp  dcm_test.cpp  dynamic_callback.cpp  event_registration_test.cpp  recorder_callback_test.cpp  recorder_test.cpp  robot_state_publisher.cpp  small_test.cpp
(+134 files in other folders)
