<?xml version="1.0"?>
<package>
  <name>naoqi_driver</name>
  <version>0.5.5</version>
  <description>Driver module between Aldebaran's NAOqiOS and ROS. It publishes all sensor and actuator data as well as basic diagnostic for battery, termperature. It subscribes also to RVIZ simple goal and cmd_vel for teleop.</description>

  <author>Karsten Knese</author>
  <maintainer email="karsten.knese@gmail.com">Karsten Knese</maintainer>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>BSD</license>

  <build_depend>boost</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend version_gte="0.0.4">naoqi_bridge_msgs</build_depend>
  <build_depend>naoqi_libqi</build_depend>
  <build_depend>naoqi_libqicore</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rosbag_storage</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>boost</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend version_gte="0.0.4">naoqi_bridge_msgs</run_depend>
  <run_depend>naoqi_libqi</run_depend>
  <run_depend>naoqi_libqicore</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rosbag_storage</run_depend>
  <run_depend>tf2_ros</run_depend>

  <conflict>nao_driver</conflict>
  <conflict>naoqi_rosbridge</conflict>
</package>
